# DiplomaThesis

./: .env.example  .gitignore  BENCHMARK_ANALYSIS_GUIDE.md  WHAT_WE_CREATED_TODAY.md  analyze_benchmark_detailed.py  docker-compose.prod.yml  docker-compose.yml  explore_questions.py  generate-env.sh  generate_comparison_charts.py  generate_latex_assets.py  init-databases.sql  start-project.bat  start-project.sh  table_lang_comparison.tex  table_leaderboard.tex
.github/: dependabot.yml
.github/workflows/: ci.yml
Backend/AIMicroservice/: Dockerfile  (+3 more)
Backend/BridgeMicroservice/: .dockerignore  BRIDGE_README.md  Dockerfile  main.py  pyproject.toml  start_app.py
Backend/BridgeMicroservice/benchmarks/: benchmark.env  generate_report.py  run_benchmark.py  visualize_results.py
Backend/BridgeMicroservice/bridgemicroservice/: bielikService.py  main.py  service.py
Backend/BridgeMicroservice/bridgemicroservice/constants/: constants.py  prompts.py
Backend/BridgeMicroservice/bridgemicroservice/controllers/: ai_controller.py  placement_controller.py  writing_controller.py
Backend/BridgeMicroservice/bridgemicroservice/middlewares/: error_handling_middleware.py
Backend/BridgeMicroservice/bridgemicroservice/services/: ai_service.py  bielik_service.py  placement_service.py  vector_db_service.py  writing_task_service.py
Backend/BridgeMicroservice/constants/: constants.py  prompts.py  variety.py
Backend/BridgeMicroservice/controllers/: ai_token_verify_controller.py  learning_path_controller.py  listening_controller.py  material_controller.py  placement_controller.py  speaking_controller.py  writing_controller.py
Backend/BridgeMicroservice/database/: connection.py  init_db.py  models.py
Backend/BridgeMicroservice/middlewares/: error_handling_middleware.py
Backend/BridgeMicroservice/models/: ai_responses.py  base_response.py
Backend/BridgeMicroservice/models/dtos/: essay_dto.py  evaluate_test_dto.py  learning_path_dtos.py  listening_task_dto.py  material_dtos.py  placement_dtos.py  speaking_analysis_dtos.py  task_dto.py  vector_db_dtos.py  verification_dtos.py
Backend/BridgeMicroservice/models/request/: placement_task_request.py  template_generation_request.py  writing_task_request.py
Backend/BridgeMicroservice/models/responses/: listening_task_response.py  speaking_format_response.py
Backend/BridgeMicroservice/pipelines/: verification_pipeline.py
Backend/BridgeMicroservice/services/: ai_service.py  bielik_service.py  image_service.py  learning_path_service.py  listening_task_service.py  material_service.py  placement_service.py  speaking_service.py  tts_service.py  user_service.py  vector_db_service.py  writing_task_service.py
Backend/BridgeMicroservice/tests/: conftest.py
Backend/BridgeMicroservice/tests/fixtures/: synthetic_pdf.py
Backend/BridgeMicroservice/tests/services/: test_learning_path_service.py  test_listening_task_service.py  test_material_integration.py  test_material_service.py  test_placement_service.py  test_speaking_format_service.py  test_speaking_service.py  test_writing_task_service.py
Backend/BridgeMicroservice/tests/smoke/: test_prod_smoke.py  test_smoke.py
Backend/BridgeMicroservice/utils/: error_codes.py  language_codes.py  user_context.py
Frontend/: .dockerignore  Caddyfile  declarations.d.ts  dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
archive/: benchmark_2025_detailed_log.json  benchmark_2025_detailed_scientific_log.json  benchmark_2025_results.csv  benchmark_2025_scientific_results.csv
load-tests/: README.md  generate-report.py  load-test.js
scripts/: local_stack_smoke.sh  post_deploy_smoke.py
terraform/: README.md  main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf
(+556 files in other folders)
