[tool.poetry]
name = "bridgemicroservice"
version = "0.1.0"
description = ""
authors = ["Stanislau"] 

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
requests = "^2.32.3"
python-dotenv = "^1.0.1"
mistral = "^18.0.1"
mistralai = "^1.0.3"
uvicorn = "^0.30.6"
openai = "^1.46.1"
fastapi-cors = "^0.0.6"
transformers = "^4.45.1"
torch = "^2.4.1"
protobuf = "^5.28.2"
sentencepiece = "^0.2.0"
litellm = "^1.49.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "start_app:start_app"